# brise-bureau-hack

./: .cursorignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: checks.yml
backend/: Dockerfile  main.py  pyproject.toml  test.http
backend/api/: routes.py
backend/parliament/: parlex_utils.py
backend/tests/: test_backend.py
backend/utils/: auth.py  parlex_utils.py
frontend/: Dockerfile
frontend/.streamlit/: config.toml
frontend/app/: backend_interface.py  chatbot.py  contribution_card_templates.py  iai_design_system.py  main.py  research_by_topic.py  run.py  utils.py
frontend/static/scripts/: iai.js
frontend/static/styles/: iai.css
frontend/tests/: test_frontend.py
shared_utils/: chatbot.py  loading.py  mermaid.py  prompts.py  render_mermaid.py  resolvers.py  schema.py  settings.py  workers.py
tests/: test_prompt_construction.py
